--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Animation</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="lps-1.0.12.bundle.js"></script>
+    <script src="scripts/lps-1.0.12.bundle.js"></script>
 
     <script src="https://pixijs.download/v5.0.3/pixi.js"></script>
 </head>
 <body>
     <div id="display"/>
 
-    <script src="app.js" type="text/javascript"></script>
-    <script src="preprocessing.js"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/preprocessing.js"></script>
 
 </body>
 </html>
