--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Animation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <script src="scripts/lps-1.0.12.bundle.js"></script>
-
     <script src="https://pixijs.download/v5.0.3/pixi.js"></script>
 </head>
 <body>
