--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animation</title>
+    <title>LPS Animation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -13,21 +13,28 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">LPS Visualiser</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+<!--            <li class="nav-item active">-->
+<!--                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+<!--            </li>-->
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <!--                <a class="nav-link disabled" href="#">Disabled</a>-->
+                <a class="nav-link " href="#">LPS</a>
             </li>
 
-                <a class="nav-link disabled" href="#">Disabled</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Github</a>
+            </li>
+
+            <li class="nav-item">
+<!--                <a class="nav-link disabled" href="#">Disabled</a>-->
+            <a class="nav-link " href="#">Sandbox</a>
             </li>
         </ul>
 
