--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -36,6 +36,11 @@
 <!--                <a class="nav-link disabled" href="#">Disabled</a>-->
             <a class="nav-link " href="#">Sandbox</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+
         </ul>
 
     </div>
@@ -50,8 +55,8 @@
     </div>
 </form>
     <div id="display"/>
-<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
-<a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>
+<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Animate</a>
+<a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Clear</a>
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/prepossessing.js"></script>
 
