reformat the front end and adding js code for text box phrasing

--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -55,8 +55,9 @@
     </div>
 </form>
     <div id="display"/>
-<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Animate</a>
-<a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Clear</a>
+<a id ="AnimateButton" href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Animate</a>
+<a id ="ClearButton" href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Clear</a>
+
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/prepossessing.js"></script>
 
