front end phrasing

--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -54,11 +54,14 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 </form>
-    <div id="display"/>
-<a id ="AnimateButton" href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Animate</a>
-<a id ="ClearButton" href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Clear</a>
 
-    <script src="scripts/app.js" type="text/javascript"></script>
+    <div id="output"></div>
+    <button id = "AnimateButton" type="button" class="btn btn-primary btn-lg">Animate</button>
+    <button id="ClearButton" type="button" class="btn btn-secondary btn-lg">Clear</button>
+
+    <div id="content" style="display:none;" ></div>
+
+<!--    <script src="scripts/app.js" type="text/javascript"></script>-->
     <script src="scripts/prepossessing.js"></script>
 
     <!-- Optional JavaScript -->
