--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -61,9 +61,9 @@
 
     <div id="content" style="display:none;" ></div>
 
-<!--    <script src="scripts/app.js" type="text/javascript"></script>-->
-    <script src="scripts/prepossessing.js"></script>
 
+    <script src="scripts/prepossessing.js"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
