--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -64,8 +64,8 @@
 <div id="content" style="display:none;"></div>
 
 
-<script src="scripts/prepossessing.js"></script>
-<script src="scripts/app.js" type="text/javascript"></script>
+<script  src="scripts/prepossessing.js"></script>
+<script  src="scripts/animation.js" type="text/javascript"></script>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script crossorigin="anonymous"
