--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -49,11 +49,18 @@
     </div>
 </nav>
 
+<!--The file chosen form-->
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlFile1">LPS visualisation for self-driving car</label>
+        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+    </div>
+</form>
 <!--the visualisation box-->
 <form>
 
     <div class="form-group">
-        <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>
+<!--        <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 </form>
