adding the file loading functino

--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -53,14 +53,14 @@
 <form>
     <div class="form-group">
         <label for="exampleFormControlFile1">LPS visualisation for self-driving car</label>
-        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+        <input type="file" class="form-control-file" accept=".lps" id="formControlFile1">
     </div>
 </form>
 <!--the visualisation box-->
 <form>
 
     <div class="form-group">
-<!--        <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
+    <!-- <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
 </form>
