--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>LPS Animation</title>
@@ -49,10 +49,14 @@
     </div>
 </nav>
 
+<p>   LPS visualisation for self-driving car <br/>
+    Define street as: street(StreetName, coordinate(X, Y), Width, Height, Number_of_lane) eg: street(piccadillyRoad, coordinate(9, 9), 80, 70, 2)<br/>
+    Define location of car as location(Name_of_car, coordinate(X, Y), Direction) eg: location(yourCar, coordinate(9, 9), eastward) <br/>
+    Define traffic light as trafficLight(coordinate(X, Y), Working_status, Color, FacingDirection) eg: trafficLight(coordinate(2, 2), on, Red, eastward)
+</p>
 <!--The file chosen form-->
 <form>
     <div class="form-group">
-        <label for="exampleFormControlFile1">LPS visualisation for self-driving car</label>
         <input type="file" class="form-control-file" accept=".lps" id="formControlFile1">
     </div>
 </form>
