--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -76,7 +76,7 @@
 <div id="content" style="display:none;"></div>
 
 
-<script src="scripts/prepossessingBackUp.js"></script>
+<script src="scripts/prepossessing.js"></script>
 <script src="scripts/animation.js" type="text/javascript"></script>
 
 <!-- Optional JavaScript -->
