--- a/Jinwei_Zhang/AnimationWeb/index.html
+++ b/Jinwei_Zhang/AnimationWeb/index.html
@@ -49,43 +49,52 @@
     </div>
 </nav>
 
-<p></p>
-<!--The file chosen form-->
-<form>
-    <div class="form-group">
-        <input type="file" class="form-control-file" accept=".lps" id="formControlFile1">
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+
+            <p></p>
+            <!--The file chosen form-->
+            <form>
+                <div class="form-group">
+                    <input accept=".lps" class="form-control-file" id="formControlFile1" type="file">
+                </div>
+            </form>
+            <!--the visualisation box-->
+            <form>
+
+                <div class="form-group">
+                    <!-- <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </form>
+
+            <div id="output"></div>
+            <button class="btn btn-primary btn-lg" id="AnimateButton" type="button">Animate</button>
+            <button class="btn btn-secondary btn-lg" id="ClearButton" type="button">Clear</button>
+        </div>
     </div>
-</form>
-<!--the visualisation box-->
-<form>
 
-    <div class="form-group">
-    <!-- <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <div class="row">
+        <div class="col-md">
+            <div id="content" style="display:none;"></div>
+
+        </div>
     </div>
-</form>
+    <script src="scripts/prepossessing.js"></script>
+    <script src="scripts/animation.js" type="text/javascript"></script>
 
-<div id="output"></div>
-<button class="btn btn-primary btn-lg" id="AnimateButton" type="button">Animate</button>
-<button class="btn btn-secondary btn-lg" id="ClearButton" type="button">Clear</button>
-
-<div id="content" style="display:none;"></div>
-
-
-<script src="scripts/prepossessing.js"></script>
-<script src="scripts/animation.js" type="text/javascript"></script>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script crossorigin="anonymous"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script crossorigin="anonymous"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script crossorigin="anonymous"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script crossorigin="anonymous"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
