--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -52,7 +52,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md">
 
@@ -80,8 +80,7 @@
 
     <div class="row">
         <div class="col-md">
-            <div id="content" style="display:none;"></div>
-
+            <div id="content" style="display:none;text-align: center;"></div>
         </div>
     </div>
     <script src="scripts/prepossessing.js"></script>
