--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -37,7 +37,7 @@
 <header>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary">
-        <a class="navbar-brand" href="#">LPS Visualiser</a>
+        <a class="navbar-brand" href="../index.html">LPS Visualiser</a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler"
                 data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
@@ -51,16 +51,16 @@
                 <!--            </li>-->
                 <li class="nav-item">
                     <!--                <a class="nav-link disabled" href="#">Disabled</a>-->
-                    <a class="nav-link " href="#">LPS</a>
+                    <a class="nav-link " href="http://lps.doc.ic.ac.uk">LPS</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Github</a>
+                    <a class="nav-link" href="https://github.com/jinwei14/LPS-visualisation">Github</a>
                 </li>
 
                 <li class="nav-item">
                     <!--                <a class="nav-link disabled" href="#">Disabled</a>-->
-                    <a class="nav-link " href="#">Sandbox</a>
+                    <a class="nav-link " href="https://lps.js.org">Sandbox</a>
                 </li>
 
                 <li class="nav-item">
