--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -86,7 +86,7 @@
 
 <footer class="footer mt-auto py-3">
     <div class="container">
-        <img src="../logo/logo.png"  width="80" height="35" align="right" alt="img">
+        <img src="../../logo/logo.png"  width="80" height="35" align="right" alt="img">
         <span class="text-muted"> &copy; Author: Jinwei Zhang</span>
 
     </div>
