adding editable table

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -100,7 +100,34 @@
 
         <div class="row">
             <div class="col-md">
-                <div id="content" style="display:none;text-align: center;"></div>
+                <div id="content" style="display:none;"></div>
+            </div>
+
+            <div class="col-md">
+                <div id = 'destination' style="background: white;">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Vehicle Name</th>
+                            <th scope="col">Destination</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">0</th>
+                            <td><span id="V0" contenteditable>#####</span></td>
+                            <td><span id="D0" contenteditable></span>#####</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td><span id="V1" contenteditable>#####</span></td>
+                            <td><span id="D1" contenteditable></span>#####</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </div>
             </div>
         </div>
     </div>
