finish the functionality of the table to show the destnation

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -104,8 +104,8 @@
             </div>
 
             <div class="col-md">
-                <div id = 'destination' style="background: white;">
-                    <table class="table table-striped">
+                <div id='destination' style="background: white;">
+                    <table class="table table-striped" id="DESTable">
                         <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -114,16 +114,16 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <th scope="row">0</th>
-                            <td><span id="V0" contenteditable>#####</span></td>
-                            <td><span id="D0" contenteditable></span>#####</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td><span id="V1" contenteditable>#####</span></td>
-                            <td><span id="D1" contenteditable></span>#####</td>
-                        </tr>
+                        <!--                        <tr>-->
+                        <!--                            <th scope="row">0</th>-->
+                        <!--                            <td><span contenteditable id="V0">#####</span></td>-->
+                        <!--                            <td><span contenteditable id="D0">#####</span></td>-->
+                        <!--                        </tr>-->
+                        <!--                        <tr>-->
+                        <!--                            <th scope="row">1</th>-->
+                        <!--                            <td><span contenteditable id="V1">#####</span></td>-->
+                        <!--                            <td><span contenteditable id="D1">#####</span></td>-->
+                        <!--                        </tr>-->
                         </tbody>
                     </table>
 
@@ -144,7 +144,7 @@
 
 <script src="scripts/prepossessing.js"></script>
 <script src="scripts/animation.js" type="text/javascript"></script>
-
+<script src="scripts/table.js" type="text/javascript"></script>
 
 </body>
 </html>
