clear up the front end

--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -55,7 +55,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/jinwei14/LPS-visualisation">Github</a>
+                    <a class="nav-link" href="https://github.com/jinwei14/LPS-visualisation"><del>Github</del></a>
                 </li>
 
                 <li class="nav-item">
