front end editing

--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -109,7 +109,7 @@
                         <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">Vehicle Name</th>
+                            <th scope="col">Vehicle</th>
                             <th scope="col">Destination</th>
                         </tr>
                         </thead>
@@ -126,6 +126,16 @@
                         <!--                        </tr>-->
                         </tbody>
                     </table>
+
+                    <div class="alert alert-success" role="alert">
+                        <h4 class="alert-heading">Welcome to LPS visualiser</h4>
+                        <p>> Start visualising your autonomous vehicle program by entering the lps program or by loading the <code>.lps</code> file</p>
+                        <p>> Define the vehicle in your lps program or via  <code>+</code> or <code>-</code> button</p>
+                        <p>> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
+                        <p>> Clear the program via <code>Clear</code> button</p>
+                        <hr>
+                        <p class="mb-0">This project is under MIT license, For further instruction please refer to the <a href="./links/aboutus.html">About</a>  page</p>
+                    </div>
 
                 </div>
             </div>
