--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -85,7 +85,6 @@
                 </form>
                 <!--the visualisation box-->
                 <form>
-
                     <div class="form-group">
                         <!-- <label for="exampleFormControlTextarea1">LPS visualisation for self-driving car</label>-->
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -134,7 +133,7 @@
                         <p>> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
                         <p>> Clear the program via <code>Clear</code> button</p>
                         <hr>
-                        <p class="mb-0">This project is under MIT license, For further instruction please refer to the <a href="./links/aboutus.html">About</a>  page</p>
+                        <p class="mb-0">This project is under MIT license, For further instruction, please refer to the <a href="./links/aboutus.html">About</a>  page</p>
                     </div>
 
                 </div>
