--- a/Jinwei_Zhang/AnimationWebFrontEnd/index.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/index.html
@@ -11,6 +11,7 @@
     <script src="scripts/lps-1.0.16.bundle.js"></script>
     <script src="https://pixijs.download/v5.0.3/pixi.js"></script>
 
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -133,7 +134,7 @@
                         <p>> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
                         <p>> Clear the program via <code>Clear</code> button</p>
                         <hr>
-                        <p class="mb-0">This project is under MIT license, For further instruction, please refer to the <a href="./links/aboutus.html">About</a>  page</p>
+                        <p class="mb-0">This project is under MIT license, For further instruction and traffic regulations, please refer to the <a href="./links/aboutus.html">About</a>  page</p>
                     </div>
 
                 </div>
@@ -143,7 +144,7 @@
 
 </main>
 
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-2">
     <div class="container">
         <img align="right" alt="img" height="35" src="../logo/logo.png" width="80">
         <span class="text-muted"> &copy; Author: Jinwei Zhang</span>
@@ -154,6 +155,10 @@
 <script src="scripts/prepossessing.js"></script>
 <script src="scripts/animation.js" type="text/javascript"></script>
 <script src="scripts/table.js" type="text/javascript"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
