--- a/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
+++ b/Jinwei_Zhang/AnimationWebFrontEnd/links/aboutus.html
@@ -77,6 +77,47 @@
 <main class="flex-shrink-0" role="main">
     <div class="container">
         <h1 class="mt-5">LPS visualiser introduction</h1>
+
+        <p class="lead">
+            The main objective of this project is to apply and extend a JavaScript implementation of a logic-based
+            language LPS to a multi-agent simulation of self-driving cars.The same set of rules will be applied to
+            all cars to achieve a certain goal such as reaching out to a goal destination, avoiding accidents.
+            Additionally, cars should be complying with traffic regulations.
+        </p>
+
+        <p class="lead">
+            -> This application contains a LPS javascript interpreter in <code>lps-1.0.16.bundle.js</code>
+        ,the loaded LPS program or the input LPS program will be interpreted via <code>lps-1.0.16.bundle.js</code>
+        </p>
+
+        <p class="lead">
+            -> This application is using  <a href="https://github.com/jekyll/jekyll">Jekyll</a>, <a href="https://getbootstrap.com">bootstrap</a>
+            for the front-end layout, and <a href="https://www.pixijs.com"> pixi.js </a> for the vehicle visualisation.
+        </p>
+
+        <p class="lead">
+            -> This application has restful API using express in Node.js. The server is hosting on amazon AWS EC2 webservice.
+        </p>
+
+        <p class="lead">
+        ->  All the LPS program are stored in <a href="https://www.mongodb.com">MongoDB</a>  and <a href="https://mongoosejs.com">Mongoose.js</a> . (This part is still being developed.)
+        </p>
+
+
+        <h2 class="mt-5">How to use</h2>
+        <p class="lead">-> Start visualising your autonomous vehicle program by entering the lps program or by clicking on the choose file button to load the <code>.lps</code> file</p>
+        <p class="lead">-> Define the vehicle in your lps program or using  <code>+</code> or <code>-</code> button to add or delete a car. Mention that deletion during the program time will not modify the underlying LPS program</p>
+        <p class="lead">-> Watch the behaviour of the vehicle by clicking the <code>Animate</code> button</p>
+        <p class="lead">-> Clear the program in the text area via <code>Clear</code> button. Clear the program by refreshing the page.</p>
+
+
+
+        <h2 class="mt-5">Logic in traffic scenario</h2>
+        <p class="lead">
+
+        </p>
+
+
         <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
             fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.
         </p>
@@ -84,7 +125,7 @@
     </div>
 </main>
 
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-2">
     <div class="container">
         <img align="right" alt="img" height="35" src="../../logo/logo.png" width="80">
         <span class="text-muted"> &copy; Author: Jinwei Zhang</span>
@@ -93,5 +134,8 @@
 </footer>
 
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
